# whisperx-asr-with-fastapi

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  whisperx_asr.py
static/: index.html
